changed to mailchimp newsletter signup

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <img src="alchemical.svg" style="max-width: 30%;
     border-radius: 50px; display:block; margin:auto;">
 
-        <p>I am Mike Sturm, an ex-academic thinking and writing about thinking&mdash;about how important it is, how we currently do it, and how we can do it better. My writing can be found almost exclusively on Medium, in the following publications: <i>Personal Growth</i>, <i>The Coffeelicious</i>, <i>The Writing Cooperative</i>, <i>Hackernoon</i>, and others. I am also an erstwhile editor at <i>The Junction</i>.</p>
+        <p>I am an ex-academic thinking and writing about thinking&mdash;about how important it is, how we currently do it, and how we can do it better. My writing can be found almost exclusively on Medium, in the following publications: <i>Personal Growth</i>, <i>The Coffeelicious</i>, <i>The Writing Cooperative</i>, <i>Hackernoon</i>, and others. I am also an erstwhile editor at <i>The Junction</i>.</p>
         <p>I have also written professionally for <a href="https://www.berelationshipready.com/">LovEd</a> and <a href="https://www.nbforum.com/">Nordic Business Forum</a>.</p>
-        <p>I publish a weekly Newsletter called <a href="http://tinyletter.com/mike_sturm">Woolgathering</a>, which is intended to help you think better, more creatively, and add more value to your work. Signing up for it will not flood your inbox with sales copy, it just gets you one email per week with my hand-crafted thoughts and curated reading material from around the web and around the bookshelves.</a>
+        <p>I publish a weekly Newsletter called <a href="http://eepurl.com/cTUcBP">Woolgathering</a>, which is intended to help you think better, more creatively, and add more value to your work. Signing up for it will not flood your inbox with sales copy, it just gets you one email per week with my hand-crafted thoughts and curated reading material from around the web and around the bookshelves.</a>
       </section>
 
 
@@ -52,8 +52,9 @@
 
       <footer>
 
-          <p class="view" style="text-align: center;">Subscribe to my newsletter. No spamming, no selling&mdash;<i>ever</i>.</p>
-          <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" placeholder="email address" style="width: 200px; height: 30px;" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" style="width: 200px; height: 30px;" value="Subscribe" /></form>
+          <p class="view" style="text-align: center;">Subscribe to my weekly newsletter.</p>
+          <form style="text-align:center;" action="//yourfool.us11.list-manage.com/subscribe/post?u=90261a3476981959e9fb98a34&amp;id=18e37d8762" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll"><p><input type="text" placeholder="email address" style="width: 200px; height: 30px;" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" style="width: 200px; height: 30px;" value="Subscribe" /></form>
           <br>
         <p><small>Copyright Mike Sturm 2016 &mdash; Some rights reserved.</small></p>
         <p><small>Hosted on GitHub Pages.</small></p>
