changed pic at top

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </header>
       <section>
         <h1>About</h1>
-        <img src="alchemical.svg" style="max-width: 30%;
+        <img src="mikesturm.github.io/writing-quill-books_default.png" style="max-width: 30%;
     border-radius: 50px; display:block; margin:auto;">
 
         <p>I am an ex-academic thinking and writing about thinking&mdash;about how important it is, how we currently do it, and how we can do it better. My writing can be found almost exclusively on Medium, in the following publications: <i>Personal Growth</i>, <i>The Coffeelicious</i>, <i>The Writing Cooperative</i>, <i>Hackernoon</i>, and others. I am also an erstwhile editor at <i>The Junction</i>.</p>
