img style changes

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
       </header>
       <section>
         <h1>About</h1>
-        <img src="mikesturm.github.io/writing-quill-books_default.png" style="max-width: 30%;
-    border-radius: 50px; display:block; margin:auto;">
+        <img src="mikesturm.github.io/writing-quill-books_default.png" style="
+    max-width: 90%;
+    display:block;
+    margin: 40px;">
 
         <p>I am an ex-academic thinking and writing about thinking&mdash;about how important it is, how we currently do it, and how we can do it better. My writing can be found almost exclusively on Medium, in the following publications: <i>Personal Growth</i>, <i>The Coffeelicious</i>, <i>The Writing Cooperative</i>, <i>Hackernoon</i>, and others. I am also an erstwhile editor at <i>The Junction</i>.</p>
         <p>I have also written professionally for <a href="https://www.berelationshipready.com/">LovEd</a> and <a href="https://www.nbforum.com/">Nordic Business Forum</a>.</p>
