--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     margin: 40px;">
 
         <p>I am an ex-academic thinking and writing about thinking&mdash;about how important it is, how we currently do it, and how we can do it better. My writing can be found almost exclusively on Medium, in the following publications: <i>Personal Growth</i>, <i>The Coffeelicious</i>, <i>The Writing Cooperative</i>, <i>Hackernoon</i>, and others. I am also an erstwhile editor at <i>The Junction</i>.</p>
-        <p>I have also written professionally for <a href="https://www.berelationshipready.com/">LovEd</a> and <a href="https://www.nbforum.com/">Nordic Business Forum</a>.</p>
-        <p>I publish a weekly Newsletter called <a href="http://eepurl.com/cTUcBP">Woolgathering</a>, which is intended to help you think better, more creatively, and add more value to your work. Signing up for it will not flood your inbox with sales copy, it just gets you one email per week with my hand-crafted thoughts and curated reading material from around the web and around the bookshelves.</a>
+        <p>I have also written professionally for a few organizations, chief among them, the <a href="https://www.nbforum.com/">Nordic Business Forum</a>.</p>
+        <p>I publish a weekly Newsletter called <a href="http://eepurl.com/cTUcBP">Woolgathering</a>, which is intended to help you think better, more creatively, and add more value to your life and work. Signing up for it will not flood your inbox with sales copy, it just gets you one email per week with my hand-crafted thoughts and curated reading material from around the web and around the bookshelves.</a>
       </section>
 
 
